--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,9 +2,9 @@
 version: 2
 
 build:
-  os: ubuntu-lts-latest
+  os: ubuntu-24.04
   tools:
-    python: "latest"
+    python: "3.12"
 
 sphinx:
   # Path to your Sphinx configuration file.
